# llama_index_object_array_reader

./: .gitignore  README.md  index.ipynb  pyproject.toml
llamaindex_object_array_reader/: __init__.py  base.py
llamaindex_object_array_reader/dataset/: __init__.py  data_simple_ols.py
test_docs/simple_txt/: who_is_colosscious.txt
