[tool.poetry]
name = "llamaindex-object-array-reader"
version = "0.1.0"
description = "Use Llamaindex to index and retrieve object arrays"
authors = ["thisishugow <59921505+thisishugow@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "llamaindex_object_array_reader"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
chromadb = "^0.4.22"
pandas = "^2.1.4"
transformers = "^4.36.2"
pypdf = "^3.17.4"
torch = "^2.1.2"
accelerate = "^0.25.0"
langchain = "^0.1.0"
safetensors = "^0.4.1"
sentence-transformers = "^2.2.2"
instructorembedding = "^1.0.1"
python-dotenv = "^1.0.1"
llama-index = "^0.10.1"
llama-index-core = "^0.10.1"
llama-index-readers-file = "^0.1.1"
llama-index-llms-ollama = "^0.1.1"
llama-index-embeddings-huggingface = "^0.1.1"
llama-index-vector-stores-chroma = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"
nbconvert = "^7.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
